--- a/blocks/about.css
+++ b/blocks/about.css
@@ -7,7 +7,7 @@
   }
   100% {
     transform: scale(1.1);
-    opacity: 0.2;
+    opacity: 0;
   }
 }
 .about {
@@ -21,7 +21,7 @@
 .about__title {
   margin: 80px 0 0 100px;
   max-width: 251px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -32,13 +32,18 @@
 .about__content {
   max-width: 660px;
   list-style-type: none;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
   margin: 119px 80px 173px;
+  gap: 80px;
 }
 .about__paragraph {
   margin-bottom: 20px;
+}
+
+.about__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 .about__circle {
