--- a/blocks/form.css
+++ b/blocks/form.css
@@ -10,7 +10,7 @@
   margin: 8px 0 32px;
   border: 1px solid #838383;
   border-radius: 4px;
-  font-family: "Inter", "Aerial", sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -24,7 +24,7 @@
   border: none;
 }
 .form__label {
-  font-family: "Inter", "Aerial", sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
@@ -35,8 +35,8 @@
   width: 100%;
   border-radius: 4px;
   text-align: center;
-  height: 50px;
-  font-family: "Inter", "Aerial", sans-serif;
+  padding: 20px;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
@@ -60,10 +60,7 @@
   display: flex;
   justify-content: center;
   gap: 12px;
-  font-family: "Inter", "Aerial", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
