--- a/blocks/header.css
+++ b/blocks/header.css
@@ -16,12 +16,11 @@
   right: 5px;
   width: 646px;
   height: 568px;
-  margin-left: 5px;
 }
 
 .header__title {
   margin: 183px 0 0;
-  font-family: "Inter", "Aerial", sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
@@ -32,10 +31,9 @@
 .header__span-accent {
   color: #3f96f3;
   display: block;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
-  font-size: 60px;
   line-height: 72px;
 }
 
@@ -55,7 +53,7 @@
   margin-top: auto;
   display: flex;
   justify-content: space-between;
-  font-family: "Inter", "Aerial", sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
