--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -4,6 +4,8 @@
   background-size: cover;
 }
 .menu__title {
+  display: flex;
+  justify-content: center;
   text-align: center;
   margin: 0 0 24px;
   font-family: "Inter";
@@ -13,10 +15,10 @@
 }
 
 .menu__subtitle {
-  display: flex;
-  justify-content: center;
+  text-align: center;
+
   margin: 0 0 100px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
 }
@@ -29,37 +31,4 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
-}
-
-.card {
-  width: 540px;
-}
-
-.card__title {
-  margin: 0 0 32px;
-  font-family: "Inter";
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.card__list {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.card__list-item {
-  display: flex;
-  font-family: "Noto Serif";
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.card__list-divider {
-  border-bottom: 1px solid black;
-  flex-grow: 1;
 }
