--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -16,12 +16,18 @@
   gap: 20px;
   padding: 0;
   margin: 0;
-  font-family: "Inter", "Aerial", sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
 }
 
-.nav__links:hover {
+.nav__link {
+  color: black;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+.nav__link:hover {
   color: #2f80ed;
 }
