--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -6,7 +6,7 @@
 
 .recipes__title {
   margin: 0 0 24px;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -15,7 +15,7 @@
 .recipes__subtitle {
   margin: 0 0 80px;
   display: flex;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
 }
@@ -26,13 +26,16 @@
   gap: 100px;
   list-style-type: none;
   margin: auto;
+  padding: 0;
+  gap: 40px;
 }
 
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+  margin: 0;
 }
