--- a/blocks/header.css
+++ b/blocks/header.css
@@ -3,11 +3,12 @@
   display: flex;
   flex-direction: column;
   height: 800px;
-  background-image: url(../images/se_project_2_files/background_header.svg);
+  background-image: url(../images/background_header.svg);
   box-sizing: border-box;
   background-color: #ffffff;
   background-size: cover;
   position: relative;
+  z-index: 1;
 }
 
 .header__image {
@@ -16,6 +17,7 @@
   right: 5px;
   width: 646px;
   height: 568px;
+  z-index: 0;
 }
 
 .header__title {
@@ -26,6 +28,7 @@
   line-height: 72px;
   letter-spacing: -0.6px;
   max-width: 729px;
+  z-index: 1;
 }
 
 .header__span-accent {
@@ -43,10 +46,12 @@
   line-height: 30px;
   margin: 28px 0 0;
   max-width: 683px;
+  z-index: 1;
 }
 
 .header__paragraph {
   margin: 0;
+  z-index: 1;
 }
 
 .header__footer {
@@ -59,4 +64,5 @@
   line-height: 20px;
   align-items: flex-end;
   color: #6f6f6f;
+  z-index: 1;
 }
