--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,6 +1,6 @@
 .menu {
   padding: 100px 0 100px;
-  background-image: url(../images/se_project_2_files/background_menu.svg);
+  background-image: url(../images/background_menu.svg);
   background-size: cover;
 }
 .menu__title {
