--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -4,8 +4,6 @@
   background-size: cover;
 }
 .menu__title {
-  display: flex;
-  justify-content: center;
   text-align: center;
   margin: 0 0 24px;
   font-family: "Inter";
@@ -16,8 +14,9 @@
 
 .menu__subtitle {
   text-align: center;
-
-  margin: 0 0 100px;
+  padding-left: 400px;
+  max-width: 780px;
+  margin-bottom: 100px;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
