--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,7 @@
 .footer {
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
   color: #fff;
+  padding-top: 60px;
 }
 
 .footer__content {
@@ -28,12 +29,14 @@
   margin: 0;
   padding-right: 80px;
   list-style-type: none;
+  padding-left: 0;
 }
 
 .footer__list-item {
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  margin-bottom: 16px;
 }
 
 .footer__social-icon {
@@ -54,7 +57,7 @@
 }
 
 .footer__copyright {
-  margin: 108px 80px 60px;
+  margin: 108px 80px 0px;
   padding: 0 0 60px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
