--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -6,7 +6,7 @@
 .menu__title {
   text-align: center;
   margin: 0 0 24px;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -20,6 +20,7 @@
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
+  margin-top: 0;
 }
 
 .menu__cards {
