--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -36,7 +36,10 @@
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
-  margin-bottom: 16px;
+}
+
+.footer__list-item:last-child {
+  padding-top: 16px;
 }
 
 .footer__social-icon {
